# Daniel90mm.github.io

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DESIGN_PRINCIPLES.md  IDEAS_TRAIL.md  README.md  RESEARCH_LOG.md
flightrecorder/: .env.search.local.example  .gitignore  CLAUDE.md  DESIGN_PRINCIPLES.md  IDEAS_TRAIL.md  README.md  RESEARCH_LOG.md  SETUP.md  config.example.toml  config.prototype.toml  flightrecorder-spec.md  pricing.example.toml  pricing.prototype.toml  pyproject.toml
flightrecorder/consults/: README.md
flightrecorder/docs/: API_CONTRACT_DRAFT.md  API_CONTRACT_REVIEW.md  API_CURRENT_STATE.md  BUDGET_GUARD.md  BUILD_STATUS.md  BUILD_STATUS_AUDIT.md  CHAT_API_CONTRACT_DRAFT.md  CHAT_IMPLEMENTATION_PLAN.md  CORE_PROGRESS.md  DOCUMENTS_GIT.md  DOGFOOD_READ_API.md  FRONTEND_SCOPE.md  IDEA_CAPTURE_RETRY_POLICY.md  IDEA_CAPTURE_VALIDATION.md  JUNIOR_TASKS.md  MATCHMAKER_API.md  MATCHMAKER_INPUTS.md  MATCHMAKER_REJECTION_FIXTURES.md  MISSING_WORK.md  NAVIGATION.md  POKEMON_MAPPING_READINESS.md  PRICING_FORMAT.md  PROJECT_REGISTRY_CONTRACT.md  PROMPT_DRIFT.md  PROTOTYPE_WALKTHROUGH.md  PROVIDER_CALL_GUARD.md  PUBLISHER_ADVERSARIAL_FIXTURES.md  PUBLISH_PREVIEW_API.md  RUNTIME_DATA_SAFETY.md  RUNTIME_PROVIDER_STATUS.md  SEARCH_TO_SPAGHETTI.md  SESSION_CLOSE_PIPELINE.md  SMALL_MODEL_TASKS.md  SMOKE_COMMANDS.md  SPAGHETTI_FORMAT.md  TERMUX_DEPENDENCIES.md  TERMUX_PHONE_PATTERN.md  TERMUX_SERVICE_INVENTORY.md  WEB_SEARCH_PROVIDER.md
flightrecorder/handoffs/: README.md
flightrecorder/prompts/: brainstorm-system.md  composer.md  curator.md  idea-capture.md  (+3 more)
(+197 files in other folders)
