[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "flightrecorder"
version = "0.1.0"
description = "Self-hosted brainstorming app with append-only idea capture and delayed public publishing."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0,<1",
    "fastapi>=0.136.1,<1",
    "google-genai>=2.4.0,<3",
    "openai>=2.37.0,<3",
    "uvicorn>=0.47.0,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<1",
    "pytest>=9.0.0,<10",
]

[tool.setuptools.packages.find]
where = ["src/backend"]

[tool.pytest.ini_options]
pythonpath = ["src/backend"]
testpaths = ["tests"]
